--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </header>
       <div class="card">
         <div class="card-header">
-          <h2>Generate a Password</h2>
+          <h2 class="page-text">Generate a Password</h2>
         </div>
         <div class="card-body">
           <textarea
@@ -28,6 +28,9 @@
           <button id="generate" class="btn">Generate Password</button>
         </div>
       </div>
+      <section>
+        <h1 class="page-text">Press CTRL+D to save this Site to your favorites!</h1>
+      </section>
     </div>
     <script src="script.js"></script>
   </body>
